force-app/main/default/objects/Lead/fields/Color_Code_New__c.field-meta.xml
<CustomField>
    <fullName>Color_Code_New__c</fullName>
    <formula>IF(Question_Score__c &gt;= 75, &quot;Blue&quot;,IF(Question_Score__c &gt;= 50, &quot;Green&quot;,IF(Question_Score__c &gt;= 25, &quot;Yellow&quot;, &quot;Red&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Score Color Code</label>
    <type>Text</type>
</CustomField>