force-app/main/default/objects/Lead/fields/Job_Opening__c.field-meta.xml
<CustomField>
    <fullName>Job_Opening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Opening</label>
    <referenceTo>Job_Opening__c</referenceTo>
    <relationshipLabel>Recruits</relationshipLabel>
    <relationshipName>Recruits</relationshipName>
    <type>Lookup</type>
</CustomField>