force-app/main/default/objects/Lead/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot;&amp;Street&amp;&quot;,&quot;&amp;City&amp;&quot;%20&quot;&amp;State&amp;&quot;%20&quot;&amp;PostalCode&amp;&quot;&amp;t=m&amp;z=13&quot;, 


IMAGE( 

&quot;http://maps.google.com/maps/api/staticmap?center=&quot; + Street + &quot;,&quot; + City + &quot;,&quot; + State + &quot; &quot; + PostalCode +&quot;&amp;zoom=13&amp;size=650x250&amp;markers=color:blue|&quot; + Street + &quot;,&quot; + City + &quot;,&quot; + State + &quot; &quot; + PostalCode + &quot;&amp;sensor=false&amp;format=png32&quot; , &quot;no map available&quot;, 250, 650))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>