force-app/main/default/objects/Lead/fields/New_Recruit__c.field-meta.xml
<CustomField>
    <fullName>New_Recruit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Recruit</label>
    <type>Checkbox</type>
</CustomField>