force-app/main/default/objects/Lead/fields/Prior_Military_Service__c.field-meta.xml
<CustomField>
    <fullName>Prior_Military_Service__c</fullName>
    <label>Prior Military Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>