force-app/main/default/objects/Lead/fields/Question_Count__c.field-meta.xml
<CustomField>
    <fullName>Question_Count__c</fullName>
    <description>Number of questions</description>
    <label>Question Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>