force-app/main/default/objects/Lead/fields/Rating_Value__c.field-meta.xml
<CustomField>
    <fullName>Rating_Value__c</fullName>
    <description>WAS: IF(ispickval(Prior_Military_Service__c,&quot;Yes&quot;),1,0) 
+If(ispickval(Education_Level__c,&quot;High School Graduate&quot;),1,0)
+If(ispickval(Education_Level__c,&quot;College Enrolled&quot;),1,0)
+If(ispickval(Education_Level__c,&quot;College Graduate&quot;),1,0)
+If(ispickval(Marital_Status__c, &quot;Never Married&quot;),1,0)
+If(ispickval(Marital_Status__c, &quot;Married&quot;),1,0)
+ VALUE( IF(TEXT( Recruiter_Adjustment_to_Rating__c ) = &apos;&apos;, &apos;0&apos;, TEXT( Recruiter_Adjustment_to_Rating__c )))</description>
    <formula>((Question_Score__c/ Question_Count__c )/10) * 5
+ VALUE( IF(TEXT( Recruiter_Adjustment_to_Rating__c ) = &apos;&apos;, &apos;0&apos;, TEXT( Recruiter_Adjustment_to_Rating__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>