force-app/main/default/objects/Lead/fields/Rating_Visual__c.field-meta.xml
<CustomField>
    <fullName>Rating_Visual__c</fullName>
    <formula>if(Rating_Value__c &gt; 4,IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;5 Stars&quot;),
if(Rating_Value__c &gt; 3,IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;4 Stars&quot;),
if(Rating_Value__c &gt; 2,IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;3 Stars&quot;),
if(Rating_Value__c &gt; 1,IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;2 Stars&quot;),
if(Rating_Value__c &gt; 0,IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;1 Star&quot;),
IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;0 Stars&quot;)
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Visual</label>
    <type>Text</type>
</CustomField>