force-app/main/default/objects/Lead/fields/Recruit_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Active_Date__c</fullName>
    <label>Recruit Active Date</label>
    <type>Date</type>
</CustomField>