force-app/main/default/objects/Lead/fields/Recruit_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Applied_Date__c</fullName>
    <label>Recruit Applied Date</label>
    <type>Date</type>
</CustomField>