force-app/main/default/objects/Lead/fields/Recruit_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Create_Date__c</fullName>
    <description>All Recruit dates are used for tracking date start at each stage for reporting</description>
    <label>Recruit Create Date</label>
    <type>Date</type>
</CustomField>