force-app/main/default/objects/Lead/fields/Recruit_Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Declined_Date__c</fullName>
    <label>Recruit Declined Date</label>
    <type>Date</type>
</CustomField>