force-app/main/default/objects/Lead/fields/Recruit_Disqualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Disqualified_Date__c</fullName>
    <label>Recruit Disqualified Date</label>
    <type>Date</type>
</CustomField>