force-app/main/default/objects/Lead/fields/Recruiter_Adjustment_to_Rating__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Adjustment_to_Rating__c</fullName>
    <label>Recruiter Adjustment to Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-5</fullName>
            </value>
            <value>
                <fullName>-4</fullName>
            </value>
            <value>
                <fullName>-3</fullName>
            </value>
            <value>
                <fullName>-2</fullName>
            </value>
            <value>
                <fullName>-1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>