force-app/main/default/objects/Lead/fields/Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>Service_Branch__c</fullName>
    <label>Service Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Branch</valueSetName>
    </valueSet>
</CustomField>