force-app/main/default/objects/Lead/fields/US_Citizen__c.field-meta.xml
<CustomField>
    <fullName>US_Citizen__c</fullName>
    <label>US Citizen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_Citizen</valueSetName>
    </valueSet>
</CustomField>